test/fail/char-low-surrogate-trap.as
let _ = word32ToChar 0xd800
